# resonator_tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
examples/: S21testdata.s2p  _example_setup.py  advanced baseline processing.ipynb  fitting over and undecoupled resonators in reflection.ipynb  notch_port_example.py  notch_port_example_withGUI.py  pandas_and_circlefit.ipynb  reflection_port_example.py  reflection_port_example_withGUI.py  remove_wiggly_baseline_with GUI.py
examples/.ipynb_checkpoints/: advanced baseline processing-checkpoint.ipynb  fitting over and undecoupled resonators in refelction-checkpoint.ipynb
resonator_tools/: __init__.py  algebraic_circlefit.py  calibration.py  circlefit.py  circuit.py  noise.py  utilities.py
tests/: resonator_tests.py  test_notch_port.py  test_reflection_port.py
tests/test_data/: S11.txt
